# sms3-backend

./: .gitignore  Cargo.toml  config_template.toml  readme.md  run-prepare.sh
.github/workflows/: macos.yml
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/account/: handle.rs  mod.rs  verify.rs
backend/src/post/: cache.rs  handle.rs  mod.rs
backend/src/tests/: account.rs  account_manage.rs  post.rs
client/: Cargo.toml
client/src/: lib.rs
client/src/raw/: account.rs  account_manage.rs  mod.rs  post.rs
shared/: Cargo.toml
shared/src/account/: handle.rs  mod.rs
shared/src/post/: handle.rs  mod.rs
sms3rs-backend/: Cargo.toml
sms3rs-backend/src/: main.rs  tests.rs
sms3rs-backend/src/account/: handle.rs  mod.rs  verify.rs
sms3rs-backend/src/post/: cache.rs  handle.rs  mod.rs
sms3rs-backend/src/tests/: account.rs  account_manage.rs  mod.rs  post.rs
sms3rs-shared/: Cargo.toml
sms3rs-shared/src/account/: handle.rs  mod.rs
sms3rs-shared/src/post/: handle.rs  mod.rs
src/: account.rs  config.rs  lib.rs  main.rs  post.rs  resource.rs
src/account/: department.rs  handle.rs  mod.rs  verify.rs
src/handle/: account.rs
src/post/: cache.rs  handle.rs  mod.rs
src/tests/: account.rs  account_manage.rs  mod.rs  post.rs
