[package]
name = "sms3rs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sms3rs-shared = { version = "*", path = "../shared" }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "*"
serde = "1.0"
async-trait = "*"
tokio = { version = "1.32", features = ["fs"] }
bytes = "*"
image = "0.24"
chrono = "0.4"
parking_lot = "0.12"
