[package]
name = "sms3rs-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
lettre = { version = "*", default-features = false, features = ["serde"] }
chrono = { version = "*", features = ["serde"] }
sqlx = { version = "*", default-features = false, features = ["macros"] }
