[package]
name = "sms3rs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
lettre = { version = "0.10", features = ["serde", "tokio1-native-tls"] }
tokio = { version = "1.28", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "*"
rand = "*"
serde_json = "*"
toml = "0.7"
sha256 = "*"
image = "0.24"
sms3rs-shared = { version = "*", path = "../sms3rs-shared" }

[dev-dependencies]
serial_test = "*"
