[package]
name = "sms3rs-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lettre = { version = "0.10", default-features = false, features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
